# lvgai-scrabble

./: README.md  ascii_ui.py  game_board.py  player.py  pyproject.toml
backend/: scrabble.py  server.py  test.py
diagrams/: client.mmd  main.mmd  scrabble_classes.mmd  server.mmd  ui.mmd
frontend/: client.py  render.py  ui.py
noah/: Scrabble_WS.py  main.py  user.py  ws_ui.py
noah/Scrabble/: Scrabble_WS.py  pyproject.toml
ram/: ascii_ui.py  client.py  redis_demo.py  scrabble.py  test.py  user.py
yuan/: fastapi_app.py  requirements.txt  scrabble_cli.py
