[project]
name = "lab-game-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioredis>=2.0.1",
    "argparse>=1.4.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "ipdb>=0.13.13",
    "redis>=6.2.0",
    "rich>=14.0.0",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]
